--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,27 @@
 	"settings": {},
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
+		"ms-python.python",
+		"ms-python.vscode-pylance",
+		"ms-python.black-formatter",
+		"ms-python.flake8",
+		"ms-vscode.live-server",
+		"ms-azuretools.vscode-docker",
+		"github.copilot",
+		"GitHub.vscode-pull-request-github",
+		"janisdd.vscode-edit-csv",
+		"mhutchie.git-graph",
+		"eamodio.gitlens",
+		"oderwat.indent-rainbow",
+		"mintlify.document",
+		"mechatroner.rainbow-csv",
+		"rangav.vscode-thunder-client",
+		"bmuskalla.vscode-tldr",
+		"Gruntfuggly.todo-tree",
+		"michaelcurrin.auto-commit-msg",
+		"tamasfe.even-better-toml",
+		"ionutvmi.path-autocomplete",
+		"kevinrose.vsc-python-indent"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
